--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
           </a>
 
           <p class="footer-text">
-            North Pole VT Ltd is a premier tourist arrangement company specializing in curated travel experiences. They offer personalized tour packages, adventure trips, and seamless travel planning. With expert guides and top-notch services, they ensure unforgettable journeys for their clients.
+            North Pole Pvt.Ltd is a premier tourist arrangement company specializing in curated travel experiences. They offer personalized tour packages, adventure trips, and seamless travel planning. With expert guides and top-notch services, they ensure unforgettable journeys for their clients.
           </p>
 
         </div>
@@ -833,7 +833,6 @@
         <div class="footer-form">
 
           <img src="./assets/images/abishek.jpg" alt="Abhishek" height="450px" width="350px">
-
       </div>
     </div>
 
