--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                   </div>
       
                   <h3 class="h3 card-title">
-                    <a href="#">Business Travel Itineraries</a>
+                    <a href="#">Luxury Group Tours</a>
                   </h3>
       
                   <p class="card-text">
