--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 </head>
 
 <body id="top">
+  <a href="https://wa.me/+917397482192" class="whatsapp-float" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+        class="whatsapp-icon">
+</a>
 
   <!-- 
     - #HEADER
@@ -227,7 +231,7 @@
           <h2 class="h2 section-title">Luxury Group Tours</h2>
 
           <p class="section-text">
-            This place is very beautiful and unique, offering a great experience. It is well-known and highly regarded. Enjoy the stunning scenery and remarkable atmosphere.
+            We aim to redefine travel. Explore destinations at its best! Visiting great places, staying at top class accommodations and dining at the finest restaurants.  Join us and make memories which last a lifetime!
           </p>
 
           <ul class="popular-list">
@@ -832,7 +836,7 @@
 
         <div class="footer-form">
 
-          <img src="./assets/images/abishek.jpg" alt="Abhishek" height="450px" width="350px">
+          <!-- <img src="./assets/images/abishek.jpg" alt="Abhishek" height="450px" width="350px"> -->
       </div>
     </div>
 
