--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>North Pole Travels Pvt. Ltd.</title>
+  <title>North Pole Travela  Pvt. Ltd.</title>
 
   <!-- 
     - favicon
@@ -38,109 +38,24 @@
   -->
 
   <header class="header" data-header>
-
     <div class="overlay" data-overlay></div>
-
     <div class="header-top">
-      <div class="container">
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+            <!-- Logo on the Left -->
+            <a href="#" class="" style="text-decoration: none;">
+                <img src="./assets/images/logo.png" height="100px" width="100px" alt="North Pole Travels Logo">
+            </a>
 
-        <a href="tel:+01123456790" class="helpline-box">
-
-          <div class="icon-box">
-            <ion-icon name="call-outline"></ion-icon>
-          </div>
-
-          <div class="wrapper">
-            <!-- <h4>Abhishek Collin Paul</h4> -->
-            <p class="helpline-title">For Further Inquires :</p>
-
-            <p class="helpline-number">+91 73974 82192</p>
-            <p class="">manager@northpoletravela.com</p>
-          </div>
-
-        </a>
-
-        <a href="#" class="logo">
-          <a style="color: aliceblue;">North Pole Travels Pvt. Ltd.</a>
-        </a>
-      </div>
+            <!-- Text on the Right -->
+            <span style="color: aliceblue; font-size: 20px; font-weight: bold; text-align: right;">
+                North Pole Travels Pvt. Ltd.
+            </span>
+        </div>
     </div>
+</header>
 
-    <div class="header-bottom">
-      <!-- <div class="container">
 
-        <ul class="social-list">
 
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
-        <nav class="navbar" data-navbar>
-
-          <div class="navbar-top">
-
-            <a href="#" class="logo">
-              <img src="./assets/images/logo-blue.svg" alt="Tourly logo">
-            </a>
-
-            <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
-              <ion-icon name="close-outline"></ion-icon>
-            </button>
-
-          </div>
-
-          <ul class="navbar-list">
-
-            <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link" data-nav-link>about us</a>
-            </li>
-
-            <li>
-              <a href="#destination" class="navbar-link" data-nav-link>destination</a>
-            </li>
-
-            <li>
-              <a href="#package" class="navbar-link" data-nav-link>packages</a>
-            </li>
-
-            <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
-            </li>
-
-            <li>
-              <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
-            </li>
-
-          </ul>
-
-        </nav>
-        <p></p>
-        <!-- <button class="btn btn-primary">Book Now</button> -->
-
-      </div> -->
-    </div>
-
-  </header>
 
 
 
@@ -815,28 +730,32 @@
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
 
-              <a href="tel:+01123456790" class="contact-link">+91 7397482192</a>
+              <a href="tel:+01123456790" class="contact-link">+91 73974 82192</a>
             </li>
 
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:info.tourly.com" class="contact-link">manager@northpoletravela.com</a>
+              <a href="mailto:info.tourly.com" class="contact-link">northpoletravela@gmail.com</a>
             </li>
-
-            <li class="contact-item">
-              <ion-icon name="location-outline"></ion-icon>
-
-              <address>Address</address>
-            </li>
-
           </ul>
 
         </div>
 
         <div class="footer-form">
 
-          <!-- <img src="./assets/images/abishek.jpg" alt="Abhishek" height="450px" width="350px"> -->
+          <p class="form-text">
+            Subscribe our newsletter for more update & news !!
+          </p>
+
+          <form action="" class="form-wrapper">
+            <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>
+
+            <button type="submit" class="btn btn-secondary">Subscribe</button>
+          </form>
+
+        </div>
+
       </div>
     </div>
 
@@ -844,7 +763,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 <a href="">North Pole Pvt.Ltd</a>. All rights reserved
+          &copy; 2022 <a href="">codewithsadee</a>. All rights reserved
         </p>
 
         <ul class="footer-bottom-list">
