--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 <a href="">codewithsadee</a>. All rights reserved
+          &copy; 2022 <a href="">North Pole Travela Pvt. Ltd.</a>. All rights reserved
         </p>
 
         <ul class="footer-bottom-list">
