--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- Text on the Right -->
             <span style="color: aliceblue; font-size: 20px; font-weight: bold; text-align: right;">
-                North Pole Travels Pvt. Ltd.
+              North Pole Travela  Pvt. Ltd.
             </span>
         </div>
     </div>
@@ -763,7 +763,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 <a href="">North Pole Travela Pvt. Ltd.</a>. All rights reserved
+          &copy; 2025 <a href="">North Pole Travela Pvt.Ltd.</a>. All rights reserved
         </p>
 
         <ul class="footer-bottom-list">
