--- a/index.html
+++ b/index.html
@@ -704,88 +704,106 @@
 
     <div class="footer-top">
       <div class="container">
-
+  
         <div class="footer-brand">
-
+  
           <a href="#" class="logo">
             <img src="./assets/images/logo.png" alt="Tourly logo">
           </a>
-
+  
           <p class="footer-text">
             North Pole Pvt.Ltd is a premier tourist arrangement company specializing in curated travel experiences. They offer personalized tour packages, adventure trips, and seamless travel planning. With expert guides and top-notch services, they ensure unforgettable journeys for their clients.
           </p>
-
+  
         </div>
-
+  
         <div class="footer-contact">
-
+  
           <h4 class="contact-title">Contact Us</h4>
-
+  
           <p class="contact-text">
             Feel free to contact and reach us !!
           </p>
-
+  
           <ul>
-
+  
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
-
+  
               <a href="tel:+01123456790" class="contact-link">+91 73974 82192</a>
             </li>
-
+  
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
-
+  
               <a href="mailto:info.tourly.com" class="contact-link">northpoletravela@gmail.com</a>
             </li>
           </ul>
-
+  
         </div>
-
+  
         <div class="footer-form">
-
-          <p class="form-text">
-            Subscribe our newsletter for more update & news !!
-          </p>
-
-          <form action="" class="form-wrapper">
-            <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>
-
-            <button type="submit" class="btn btn-secondary">Subscribe</button>
-          </form>
-
+  
+          
+  
+          <!-- Replaced the form with an image and "MANAGER" text below -->
+          <div class="manager-image">
+            <img src="/assets/images/abishek.jpg" alt="Manager Image" class="manager-img">
+            <p class="manager-title">MANAGER</p>
+          </div>
+  
         </div>
-
+  
       </div>
     </div>
-
+  
     <div class="footer-bottom">
       <div class="container">
-
+  
         <p class="copyright">
           &copy; 2025 <a href="">North Pole Travela Pvt.Ltd.</a>. All rights reserved
         </p>
-
+  
         <ul class="footer-bottom-list">
-
+  
           <li>
             <a href="#" class="footer-bottom-link">Privacy Policy</a>
           </li>
-
+  
           <li>
             <a href="#" class="footer-bottom-link">Term & Condition</a>
           </li>
-
+  
           <li>
             <a href="#" class="footer-bottom-link">FAQ</a>
           </li>
-
+  
         </ul>
-
+  
       </div>
     </div>
-
+  
   </footer>
+  
+  <!-- CSS to style the image and the "MANAGER" text -->
+  <style>
+    .manager-image {
+      text-align: center;
+    }
+  
+    .manager-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 500%; /* Optional: makes the image circular */
+    }
+  
+    .manager-title {
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 16px;
+    }
+  </style>
+  
 
 
 
