--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@
           <!-- Replaced the form with an image and "MANAGER" text below -->
           <div class="manager-image">
             <img src="/assets/images/abishek.jpg" alt="Manager Image" class="manager-img">
+            <p class="manager-title">Abhishek Collin Paul</p>
             <p class="manager-title">MANAGER</p>
           </div>
   
