--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
           <!-- Replaced the form with an image and "MANAGER" text below -->
           <div class="manager-image">
             <img src="/assets/images/abishek.jpg" alt="Manager Image" class="manager-img">
-            <p class="manager-title">Abhishek Collin Paul</p>
-            <p class="manager-title">MANAGER</p>
+            <p class="manager-title">Abhishek Collin Paul,Managing Director</p>
+            <p class="manager-title">North Pole Travela Pvt. Ltd.</p>
           </div>
   
         </div>
